juniper-from-schema/tests/compile_fail/scalar_with_built_in_name.stderr
error: proc macro panicked
  --> tests/compile_fail/scalar_with_built_in_name.rs:4:1
   |
4  | / juniper_from_schema::graphql_schema! {
5  | |     schema {
6  | |       query: Query
7  | |     }
...  |
15 | |     scalar String
16 | | }
   | |_^
   |
   = help: message:

           error: You cannot declare scalars with names matching a built-in
            --> schema:2:73
             |
           2 |    { helloWorld(name : String!) : String! @ juniper(ownership : "owned") } scalar
             |                                                                            ^

           aborting due to previous error

error[E0405]: cannot find trait `QueryFields` in this scope
  --> tests/compile_fail/scalar_with_built_in_name.rs:20:6
   |
20 | impl QueryFields for Query {
   |      ^^^^^^^^^^^ not found in this scope
